--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Etch a sketch</title>
 </head>
 <body>
+    <div class="container"></div>
     <script src="script.js"></script>
 </body>
 </html>
