--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Etch a sketch</title>
 </head>
 <body>
+    <button id="btn">Generate</button>
     <div class="container"></div>
     <script src="script.js"></script>
 </body>
